--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -1,11 +1,12 @@
 @use "./scss/" as *;
 
-@import url("https://fonts.googleapis.com/ccss2?family=Montserrat:wght@300;400;500;600;700;900&display=swap");
+//@import url("https://fonts.googleapis.com/ccss2?family=Montserrat:wght@300;400;500;600;700;900&display=swap");
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
 }
 
 html {
